--- a/Guaflix/Views/Guaflix/Login.cshtml
+++ b/Guaflix/Views/Guaflix/Login.cshtml
@@ -16,7 +16,7 @@
                 <input type="submit" value="Login" />
             </div>
             <div>
-                @Html.ActionLink("Resgistrarse", "Registrar", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Resgistrarse", "CrearUsuario", "Guaflix", new { area = "" }, new { @class = "navbar-brand" })
             </div>
 
             <div>
