--- a/Guaflix/Views/Guaflix/Catálogo.cshtml
+++ b/Guaflix/Views/Guaflix/Catálogo.cshtml
@@ -7,3 +7,4 @@
 
 <li>@Html.ActionLink("Ingreso Manual de Peliculas", "IngresoPeliculaManual", "Peliculas")</li>
 <li>@Html.ActionLink("Carga de Peliculas", "CargaDePeliculas", "Peliculas")</li>
+<li>@Html.ActionLink("Listado de peliculas", "ListadoPeliculas", "Peliculas")</li>
