--- a/Guaflix/Views/Guaflix/Catálogo.cshtml
+++ b/Guaflix/Views/Guaflix/Catálogo.cshtml
@@ -8,3 +8,6 @@
 <li>@Html.ActionLink("Ingreso Manual de Peliculas", "IngresoPeliculaManual", "Peliculas")</li>
 <li>@Html.ActionLink("Carga de Peliculas", "CargaDePeliculas", "Peliculas")</li>
 <li>@Html.ActionLink("Listado de peliculas", "ListadoPeliculas", "Peliculas")</li>
+<li>@Html.ActionLink("Resgistrarse", "CrearUsuario", "Guaflix")</li>
+<li>@Html.ActionLink("Cargar Usuarios", "CargarUsuarios", "Guaflix")</li>
+
