--- a/Guaflix/Views/Guaflix/CrearUsuario.cshtml
+++ b/Guaflix/Views/Guaflix/CrearUsuario.cshtml
@@ -70,6 +70,7 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Regresar a menu principal", "Catálogo", "Guaflix")
+        @Html.ActionLink("Iniciar sesion de nuevo", "Login", "Guaflix")
+    </div>
