--- a/Guaflix/Views/Peliculas/IngresoPeliculaManual.cshtml
+++ b/Guaflix/Views/Peliculas/IngresoPeliculaManual.cshtml
@@ -55,5 +55,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar a vista principal", "Catálogo","Guaflix")
 </div>
