--- a/Guaflix/Views/Peliculas/listaEncontrados.cshtml
+++ b/Guaflix/Views/Peliculas/listaEncontrados.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Guaflix.Models.Peliculas2>
 
 @{
-    ViewBag.Title = "ListadoPeliculas";
+    ViewBag.Title = "listaEncontrados";
 }
 
-<h2>ListadoPeliculas</h2>
+<h2>listaEncontrados</h2>
 
 <p>
-    @Html.ActionLink("Buscar", "Busqueda","Peliculas")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
