--- a/Guaflix/Views/Guaflix/CatalogoUsuario.cshtml
+++ b/Guaflix/Views/Guaflix/CatalogoUsuario.cshtml
@@ -1,4 +1,12 @@
-﻿
+﻿<head>
+    <title>Color de Fondo de la página</title>
+    <style type="text/css">
+        body {
+            background: black;
+        }
+    </style>
+</head>
+<font size=40 color="white"> Guaflix</font>
 @{
     ViewBag.Title = "CatalogoUsuario";
 }
