--- a/Guaflix/Views/Guaflix/CargarUsuarios.cshtml
+++ b/Guaflix/Views/Guaflix/CargarUsuarios.cshtml
@@ -1,7 +1,16 @@
-﻿
+﻿<head>
+    <title>Color de Fondo de la página</title>
+    <style type="text/css">
+        body {
+            background: black;
+        }
+    </style>
+</head>
+<font size=40 color="white"> Guaflix</font>
 @{
     ViewBag.Title = "CargarUsuarios";
 }
+
 @using (Html.BeginForm("CargarUsuarios", "Guaflix", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div>
