--- a/Guaflix/Views/Guaflix/CatalogoUsuario.cshtml
+++ b/Guaflix/Views/Guaflix/CatalogoUsuario.cshtml
@@ -6,3 +6,4 @@
 <h2>CatalogoUsuario</h2>
 
 <li>@Html.ActionLink("Listado de peliculas", "ListadoPeliculas", "Peliculas")</li>
+<li>@Html.ActionLink("Listado de peliculas de sus favoritas", "ListadoPorUsuario", "Peliculas")</li>
