--- a/Guaflix/Views/Guaflix/Catálogo.cshtml
+++ b/Guaflix/Views/Guaflix/Catálogo.cshtml
@@ -10,4 +10,5 @@
 <li>@Html.ActionLink("Listado de peliculas", "ListadoPeliculas", "Peliculas")</li>
 <li>@Html.ActionLink("Resgistrarse", "CrearUsuario", "Guaflix")</li>
 <li>@Html.ActionLink("Cargar Usuarios", "CargarUsuarios", "Guaflix")</li>
+<li>@Html.ActionLink("Listado de sus peliculas guardadas", "ListadoPorUsuario", "Peliculas")</li>
 
